--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,10 @@
 <!-- <a *ngFor="let route of routes" [routerLink]="route.url">{{route.linkName}}</a> -->
 <!-- <a [routerLink]="settingsRoute">Settings</a> -->
 <!-- <p> gfjdhgjkfldkfl</p> -->
-
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar> -->
 <br>
 <!-- <app-side-bar></app-side-bar> -->
-<app-cards></app-cards>
+<!-- <app-cards></app-cards> -->
 <br>
-<app-show-collections></app-show-collections>
+<!-- <app-show-collections></app-show-collections> -->
 <router-outlet></router-outlet>
