--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -44,7 +44,7 @@
     <!-- <button (click)="sendData()">Add To Collections</button> -->
 
     <div class="row" *ngFor="let res1 of res">
-        <div class="card">
+        <div class="card" style="width:25%">
           <div class="card-body">
             <img src="{{res1.featured_image}}">
             <h5 class="card-title">{{res1.name}}</h5>
