--- a/src/app/show-collections/show-collections.component.html
+++ b/src/app/show-collections/show-collections.component.html
@@ -1,14 +1,16 @@
-<button (click)="showCollections()">Show  Collections</button>
+<!-- showCollections();
 <br>
-<div>
+<div *ngIf="clicked">
   <div class="row" *ngFor="let resturant of resturants">
     <div>This is resturant: {{resturant}}</div>
     <div class="card">
       <div class="card-body">
         <img src="{{resturant.featured_image}}">
         <h5 class="card-title">{{resturant.name}}</h5>
-        <!-- <a  class="btn btn-primary" (click)="sendData(res1)">Add To Collections</a> -->
+        <a  class="btn btn-primary" (click)="sendData(res1)">Add To Collections</a>
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+<p>asdasdadasdasdasd</p>
