--- a/src/app/exotic-restaurants/exotic-restaurants.component.html
+++ b/src/app/exotic-restaurants/exotic-restaurants.component.html
@@ -1,4 +1,5 @@
-<div class="card-deck">
+<body>
+<div class="card-deck" >
     <div class="card">
       <img class="card-img-top" src="src/assets/img/therajpavilion.png" alt="Card image cap" >
       <div class="card-body">
@@ -41,11 +42,11 @@
         <h5 class="card-title">Kebabs and Kurries</h5>
         <p class="card-text">North Indian, South Indian, Biriyani, Kebabs<br>avg. ₹500 for 2 people<br>Opens 6:30am-11:30pm</p>
         <a href="#" class="btn btn-primary button">Order Online</a>
-        <mat-icon (onclick)="AddToCollection()">library_add</mat-icon>
+        <mat-icon (onclick)="AddToCollection()" md-tooltip='Click here to add to collection'>library_add</mat-icon>
       </div>
       <div class="card-footer">
         <small class="text-muted">Last updated 55 mins ago</small>
       </div>
     </div>
   </div>
-
+</body>
