--- a/src/app/featured-places/featured-places.component.css
+++ b/src/app/featured-places/featured-places.component.css
@@ -1,24 +1,45 @@
-.card-img-top {
-  width:100%;
+/* .card-img-top { */
+  /* width:100%; */
   /* height:12em; */
-  opacity: 0.7;
-    display: block;
+  /* opacity: 0.7; */
+    /* display: block; */
     /* width: 25%; */
-     transition: .5s ease;
+     /* transition: .5s ease; */
      /* flex-direction: row; */
 
 
-}
+/* } */
 .card{
   /* flex-direction:column; */
-  width:25%;
+  width:40%;
 }
 
-.card-deck{
-    flex-direction:row;
+/* .card-deck{
+    flex-direction:column;
+    margin-left:30%;
 }
 
 .card-img-top:hover {
   opacity: 1;
 
+} */
+
+.edit{
+  background-image: url("src/assets/img/foodbackground2.jpg");
+  height:600%;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+
+}
+.card{
+  flex-direction:column;
+  width:20%;
+  margin-left:50rem;
+  border-style:solid;
+  border-width:0.5rem;
+  border-color: black;
+}
+img{
+  width:30rem;
+  height:30rem;
 }
