--- a/src/app/exotic-restaurants/exotic-restaurants.component.html
+++ b/src/app/exotic-restaurants/exotic-restaurants.component.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">The Raj Pavilion</h5>
         <p class="card-text">Best in Indian, Continental and Chinese<br>min. ₹1500 for 2 people<br>Opens 6:30am-11:30pm</p>
         <a href="#" class="btn btn-primary button">Order Online</a>
-        <mat-icon (onclick)="AddToCollection()">library_add</mat-icon>
+        <mat-icon >library_add</mat-icon>
       </div>
       <div class="card-footer">
         <small class="text-muted">Last updated 1 year ago</small>
@@ -18,7 +18,7 @@
         <h5 class="card-title">Yataii</h5>
         <p class="card-text">Best in Japanese Cuisine<br>avg. ₹2300 for 2 people<br>Opens 6:30am-11:30pm</p>
         <a href="#" class="btn btn-primary button">Order Online</a>
-        <mat-icon (onclick)="AddToCollection()">library_add</mat-icon>
+        <mat-icon>library_add</mat-icon>
       </div>
       <div class="card-footer">
         <small class="text-muted">Last updated 43 hrs. ago</small>
@@ -30,7 +30,7 @@
         <h5 class="card-title">Cubbon Pavilion</h5>
         <p class="card-text">European, Continental, Chinese, Thai<br>approx. ₹2500 for 2people<br>Opens 6:30am-11:30pm</p>
         <a href="#" class="btn btn-primary button">Order Online</a>
-        <mat-icon (onclick)="AddToCollection()">library_add</mat-icon>
+        <mat-icon>library_add</mat-icon>
       </div>
       <div class="card-footer">
         <small class="text-muted">Last updated 3 days ago</small>
@@ -42,7 +42,7 @@
         <h5 class="card-title">Kebabs and Kurries</h5>
         <p class="card-text">North Indian, South Indian, Biriyani, Kebabs<br>avg. ₹500 for 2 people<br>Opens 6:30am-11:30pm</p>
         <a href="#" class="btn btn-primary button">Order Online</a>
-        <mat-icon (onclick)="AddToCollection()" md-tooltip='Click here to add to collection'>library_add</mat-icon>
+        <mat-icon  md-tooltip='Click here to add to collection'>library_add</mat-icon>
       </div>
       <div class="card-footer">
         <small class="text-muted">Last updated 55 mins ago</small>
